--- a/lab-3/index.html
+++ b/lab-3/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Font Delivery Example</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #333;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            font-size: 2.5em;
+        }
+        p {
+            font-size: 1.2em;
+        }
+        .font-explanation {
+            font-family: 'MyCustomFont'; /* Placeholder for your custom font */
+            font-size: 1.5em;
+            margin-top: 20px;
+        }
+    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet"> <!-- Example for visual testing -->
+</head>
+<body>
+    <h1>How Fonts are Delivered to Clients</h1>
+    <p>This page explains how to deliver fonts using the @font-face method.</p>
+    
+    <div class="font-explanation">
+        To use a custom font, upload the font files to your server and define them using the @font-face rule in your CSS. This method ensures that all users see the same font, regardless of what is installed on their device.
+    </div>
+
+    <footer>
+        <p>Last updated: 
+            <span id="lastModified"></span>
+        </p>
+    </footer>
+    <script type="text/javascript">
+         var x = document.lastModified;
+         document.getElementById('lastModified').textContent = x;
+    </script>
+</body>
+</html>
 
