--- a/lab-3/index.html
+++ b/lab-3/index.html
@@ -24,7 +24,7 @@
     <h1>How to Deliver Fonts to a Browser</h1>
     <p>
         Fonts can be delivered to a browser through various methods, but one of the most common and user-friendly methods is using Google Fonts. 
-        By including a specific `<link>` in your HTML, you can easily load a font hosted by Google on your website. 
+        By including a specific `link` in your HTML, you can easily load a font hosted by Google on your website. 
         This method minimizes the need for local font files and ensures that the font is accessible across all devices.
     </p>
     <p>
