--- a/lab-8/index.html
+++ b/lab-8/index.html
@@ -3,34 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 8: Secure Form</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Lab 8: Input Validation</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            max-width: 600px;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+        label {
+            font-weight: bold;
+        }
+        input {
+            padding: 8px;
+            font-size: 1rem;
+        }
+        .error {
+            color: red;
+            font-size: 0.9rem;
+        }
+    </style>
 </head>
 <body>
     <h1>Secure Web Form</h1>
-    <form id="secureForm" action="#" method="POST" onsubmit="return validateForm()">
+    <form id="secureForm">
         <label for="firstName">First Name:</label>
-        <input type="text" id="firstName" name="firstName" required>
-        <span id="firstNameError" class="error"></span>
+        <input type="text" id="firstName" name="firstName" maxlength="50" required>
 
         <label for="lastName">Last Name:</label>
-        <input type="text" id="lastName" name="lastName" required>
-        <span id="lastNameError" class="error"></span>
+        <input type="text" id="lastName" name="lastName" maxlength="50" required>
 
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
-        <span id="emailError" class="error"></span>
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <span id="passwordError" class="error"></span>
+        <input type="password" id="password" name="password" minlength="8" required>
 
         <label for="confirmPassword">Confirm Password:</label>
         <input type="password" id="confirmPassword" name="confirmPassword" required>
-        <span id="confirmPasswordError" class="error"></span>
 
+        <div id="errorMessage" class="error"></div>
         <button type="submit">Submit</button>
     </form>
-    <script src="script.js"></script>
+
+    <script src="validation.js"></script>
 </body>
 </html>
